[gd_scene load_steps=4 format=3 uid="uid://wbgcl2je2eai"]

[ext_resource type="Script" path="res://scenes/GameUI/game_ui.gd" id="1_1b56e"]
[ext_resource type="LabelSettings" uid="uid://fl3d2en01l5u" path="res://scenes/GameUI/label_orange.tres" id="1_5rd4w"]
[ext_resource type="LabelSettings" uid="uid://c5iceudxvausy" path="res://scenes/GameUI/label_yellow.tres" id="2_2frro"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1b56e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0 / 100"
label_settings = ExtResource("1_5rd4w")

[node name="ExitLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Go To Exit"
label_settings = ExtResource("2_2frro")

[node name="TimeLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "1000s"
label_settings = ExtResource("1_5rd4w")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.92549, 0.968627, 0.184314)

[node name="GameOver" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -11.5
offset_right = 125.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Well done, you took xxx seconds"
label_settings = ExtResource("1_5rd4w")
